# flathub-authenticator

./: .gitignore  README.md  meson.build  meson_options.txt  org.flathub.Authenticator.json
.github/workflows/: main.yml
data/: meson.build  org.flathub.Authenticator.desktop.in  org.flathub.Authenticator.service.in
src/: main.c  meson.build  org.freedesktop.Application.xml  org.freedesktop.Flatpak.Authenticator.xml
